[STAC] search collections first commit